remove pagewrap id from home and fix footer txt in ie7, fix borders in ie

--- a/styles/IE.less
+++ b/styles/IE.less
@@ -7,6 +7,11 @@
 
 html, body {
 	height: 100%;
+
+}
+
+html {
+	border: none;
 }
 
 body {
@@ -17,6 +22,8 @@ body {
 	height: 100%;
 	min-height: 100%
 	width: 890px !important;
+	border-left: 1px solid @grey;
+	border-right: 1px solid @grey;
 }
 
 // Make footer img appear in IE8
@@ -200,5 +207,9 @@ body {
 
 #footer .push {
 	height: 100px;
+}
+
+#footer h4 {
+	line-height: 15px;
 }
 
